css and js added

--- a/index.html
+++ b/index.html
@@ -1,52 +1,59 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" type="text/css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-    <title>Joe | Portfolio </title>
-    <script src="https://kit.fontawesome.com/a2e0a6a089.js" crossorigin="anonymous"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Joe Akindele | Portfolio</title>
+  <link rel="stylesheet" href="style.css" type="text/css"/>
 </head>
 <body>
-    <header>
-        <h1>Joe Akindele</h1>
-        <p>MEAN STACK & Wordpress Developer</p>
-        <a class="btn" href="mailto:yourname@example.com">Contact Me</a>
-    </header>
 
-    <section class="about-me">
-        <h1>About Me</h1>
-        <p>I am a passionate web developer, I love turning ideas into reality</p>
-    </section>
+  <!-- Navbar -->
+  <nav class="navbar">
+    <ul>
+      <li><a href="#about">About</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
 
- <section class="skills">
-        <h2>Skills</h2>
-        <ul>
-          <li>HTML, CSS, JavaScript</li>
-          <li>Node.js, Express.js</li>
-          <li>MongoDB</li>
-          <li>Angular</li>
-          <li>SEO</li>
-          <li>WordPress (Elementor, Themes, Plugins)</li>
-        </ul>
-      </section>
+  <!-- Hero Section -->
+  <header class="hero">
+    <h1>Joe Akindele</h1>
+    <p>MEAN Fullstack Developer & WordPress Expert</p>
+    <a href="#contact" class="btn">Contact Me</a>
+  </header>
 
-      <section class="project">
-        <h2>More projects coming soon</h2>
-      </section>
+  <!-- About Section -->
+  <section id="about">
+    <h2>About Me</h2>
+    <p>I build dynamic, responsive, and user-friendly websites using the MEAN stack and WordPress.</p>
+    <ul>
+      <li>JavaScript / TypeScript</li>
+      <li>Node.js / Express</li>
+      <li>Angular</li>
+      <li>MongoDB</li>
+      <li>WordPress / Elementor</li>
+    </ul>
+  </section>
 
-        <section class="contact">
-            <h2>Contact</h2>
-            <p><i class="fas fa-envelope"></i> akindelejoe2020@gmail.com</p>
-            <p><i class="fab fa-github"></i> https://github.com/akindelejoe</p>
-            <p><i class="fab fa-linkedin"></i> https://www.linkedin.com/feed/</p>
-        </section>
-          
-    </section>
+  <!-- Projects Section -->
+  <section id="projects">
+    <h2>Projects</h2>
+    <div class="project">
+      <h3>Arese fits</h3>
+      <p>An e-commerce website built with WordPress.</p>
+      <a href="https://arese.fit/" target="_blank">View Project</a>
+    </div>
+  </section>
 
-
-    <footer>
-        <p>&copy; 2025 Joe akindele</p>
-    </footer>
+  <!-- Contact Section -->
+  <section id="contact">
+    <h2>Contact Me</h2>
+    <p>Email: <a href="mailto:akindelejoe2020@gmail.com">akindelejoe2020@gmail.com</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/joseph-akindele-187191277/">Joseph Akindele</a></p>
+    <p>GitHub: <a href="https://github.com/akindelejoe">akindelejoe</a></p>
+  </section>
+  <script src="script.js"></script>
 </body>
 </html>
