--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Joe Akindele | Full Stack Developer</title>
   <link rel="stylesheet" href="style.css" />
-  <script defer src="script.js"></script>
+  <link rel="icon" type="image/png" href="favicon_io (9)/apple-touch-icon.png">
+  <link rel="icon" type="image/png" href="favicon_io (9)/android-chrome-512x512.png">
+  <link rel="icon" type="image/png" href="favicon_io (9)/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" href="favicon_io (9)/favicon-16x16.png">
+  <link rel="icon" type="image/png" href="favicon_io (9)/favicon.ico">
+  <link rel="icon" type="image/png" href="favicon_io (9)/site.webmanifest">
+
+
+
+
 </head>
 <body>
 
