Added Tuba Farm Project

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <li><a href="#about">About</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
-          <li><a href="resume/TheResume.docx" download class="btn resume-btn">Download Resume</a></li>
+          <li><a href="Joseph-Akindele-Resume-2.pdf" download class="btn resume-btn">Download Resume</a></li>
         </ul>
       </nav>
     </div>
@@ -66,8 +66,11 @@ Let's build something amazing together.
       <h2>Projects</h2>
       <div class="projects-grid">
         <div class="project-card">
-          <h3>Under construction</h3>
-          <p>This section is still under construction. Trust me, it'll be worth the wait!</p>
+          <h3> <a href= "https://tractor-selector-15.onrender.com/">Tuba Farm Equipment — Tractor Selector</a></h3>
+          <p>A tiny full-stack app that recommends a tractor model based on farm inputs (acres, crops, months worked, and preferred fuel).
+            Frontend is plain HTML/CSS/JS; backend is Node/Express. Deployed on Render.
+            
+            </p>
         </div>
         <div class="project-card">
           <h3><a href="https://arese.fit/">Arese Fit</a></h3>
