--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@ Let's build something amazing together.
           <p>WordPress-based Business Website with Elementor pagebuilder and WP Bakery.</p>
         </div>
       </div>
+      <div class="project-card">
+        <h3><a href="https://akindelejoe.github.io/bonsai-faq/">Bonsai-faq</a></h3>
+        <p>Bonsai-faq is a web-based FAQ application designed to provide users with clear and organized answers to common questions. It features an intuitive interface where users can easily navigate through different topics and quickly find the information they need. The project demonstrates skills in HTML, CSS, and JavaScript, showcasing the ability to create interactive and user-friendly web pages.</p>
+      </div>
+    </div>
     </div>
   </section>
 
