--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ Let's build something amazing together.
       </div>
       <div class="project-card">
         <h3><a href="https://akindelejoe.github.io/bonsai-faq/">Bonsai-faq</a></h3>
-        <p>Bonsai-faq is a web-based FAQ application designed to provide users with clear and organized answers to common questions. It features an intuitive interface where users can easily navigate through different topics and quickly find the information they need. The project demonstrates skills in HTML, CSS, and JavaScript, showcasing the ability to create interactive and user-friendly web pages.</p>
+        <p>Bonsai-faq is a web-based FAQ application built with HTML, CSS, JavaScript, and jQuery. It provides users with clear and organized answers to common questions in an interactive format. Using jQuery, the project implements smooth toggling effects that allow users to expand and collapse answers easily, creating a more dynamic and user-friendly experience. This project highlights my ability to combine core web technologies with jQuery to enhance interactivity and usability.</p>
       </div>
     </div>
     </div>
